# UFRoom

./: .gitignore  README.md  README_INIT.md  diagrams.md  docker-compose.yml  install.md
apps/api/: README.md  docker-compose.yml  init.sql  package.json
apps/api/elastic-start-local/: start.sh
apps/api/prisma/: schema.prisma
apps/api/src/: server.ts
apps/api/src/controllers/: address.ts  auth.ts  search.ts
apps/api/src/examples/: elasticsearch-guide.ts
apps/api/src/plugins/: elasticsearch.ts  jwt.ts  prisma.ts
apps/api/src/routes/: address.ts  announcement.ts  auth.ts  health.ts  owner.ts  search.ts
apps/api/src/schemas/: address.ts  announcement.ts  auth.ts  owner.ts  search.ts
apps/api/src/services/: address.ts  auth.ts  autocomplete.ts  owner.ts  search.ts
apps/api_fastapi/: README.md  example.env  main.py  pyproject.toml  requirements.txt
apps/api_fastapi/simple_agent/: agent.py
apps/api_fastapi/simple_agent/utils/: context.py  prompt.py  request_schema.py  state.py
apps/api_fastify/: README.md  example.env  package.json
apps/api_fastify/prisma/: schema.prisma
apps/api_fastify/scripts/: init_elasticsearch_index.ts
apps/api_fastify/src/: server.ts
apps/api_fastify/src/controllers/: address.ts  announcement.ts  auth.ts  autocomplete.ts  owner.ts  university.ts
apps/db/: Dockerfile  init.sql
apps/db/elastic-start-local/: start.sh
apps/db/scripts/: README.md  feed_universities.sql  init_elasticsearch_index.ts  mock_elasticsearch_index.ts
apps/web/: README.md  example.env  next.config.ts  package.json
apps/web/src/app/: layout.tsx  (+1 more)
(+31 files in other folders)
